[gd_scene load_steps=2 format=3 uid="uid://tdgrnht2hkfm"]

[ext_resource type="Script" uid="uid://cuf08ug3mtdqr" path="res://scripts/ui/Report/DetectorItem.gd" id="1_hps15"]

[node name="DetectorItem" type="HBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource("1_hps15")

[node name="DetectorName" type="Label" parent="."]
texture_filter = 3
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Name"

[node name="NumberOfUses" type="Label" parent="."]
texture_filter = 3
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "# Uses"

[node name="TotalCost" type="Label" parent="."]
texture_filter = 3
layout_mode = 2
theme_override_colors/font_color = Color(0.47451, 0.635294, 0.462745, 1)
text = "Cost"
